# ta_rafza_containerized

./: .env  README.md  docker-compose.yml  mosquitto.conf
development/: app.py  main.py  prediction_api.py  vibration_sensor.py
docker/: Dockerfile  pyproject.toml  requirements.txt
docker/app/machine_learning/: lstm_autoencoder.py  rul.py  train_model.py
docker/app/model_deployment/: app.py  inference.py  main.py  main_app.py  message_processor.py  prediction_api.py  prediction_service.py  streamlit_app.py
docker/app/model_deployment/templates/: index.html
docker/app/sensor_simulator/: esp32_simulator.py  load_influxdb.py  mqtt_processor.py  mqtt_simulator.py  mqtt_to_influxdb.py  vibration_sensor.py
docker/diagram/: data_pipeline.py  progres report.md
docker/model_deployment/: app.py  app_v2.py  app_v3.py
docker/model_deployment/app/: main.py  main_X.py
docker/model_deployment/pretrained_model/: autoencoder_best_model.keras  autoencoder_best_model_1213.keras  autoencoder_final_model.h5  lstm_autoencoder_model.keras  lstm_autoencoder_model_20241109_v1.h5  lstm_autoencoder_weights_20241109_v1.weights.h5  new_model_without_batch_shape.h5  pca_model.pkl  rul_gbr_model_pca.pkl  scaler.save  scaler_final.pkl
docker/model_deployment/static/: app.js  style.css
docker/model_deployment/templates/: index.html
docker/simulator/: simulator.py  simulator_withkalman.py
docker/training_model/: check_mse.py  train_model.py
flask/: Dockerfile  requirements.txt
model_deployment/: app.py
sensor_simulator/: esp32_simulator.py
(+9 files in other folders)
